Fix the overflow in the menu category

--- a/state_2c_geonode/static/css/site_base.css
+++ b/state_2c_geonode/static/css/site_base.css
@@ -3526,6 +3526,11 @@ tbody.collapse.in {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   background-clip: padding-box;
 }
+.dropdown-menu.categories {
+  overflow-y: auto; 
+  max-height: 70vh;
+}
+
 .dropdown-menu.pull-right {
   right: 0;
   left: auto;
